--- a/main2.css
+++ b/main2.css
@@ -1,12 +1,12 @@
-h1 {
+/* h1 {
   text-align: center;
-}
+} */
 
 body {
   background-color: whitesmoke;
 }
 
-input {
+/* input {
   text-align: center;
   float: right;
   padding: 6px;
@@ -14,5 +14,18 @@ input {
   margin-top: 20px;
   margin-right: 40%;
   font-size: 20px;
+} */
+
+h1 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 50px;
+  background-color: lightblue;
 }
+
+p {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 25px;
+  background-color: red;
 }
