--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ button {
 }
 
 .button1:hover {
-  background-image: url("https://media.giphy.com/media/7OGle9SvMMwAE/giphy.gif");
+  background-image: url("https://media1.tenor.com/images/c59e7bfa31590e3f9eb4925639ddeb88/tenor.gif?itemid=7283217");
   background-size: cover;
 }
 
