--- a/main2.css
+++ b/main2.css
@@ -3,7 +3,7 @@
 } */
 
 body {
-  background-color: whitesmoke;
+  background-image: url("https://data.whicdn.com/images/127320878/original.png");
 }
 
 /* input {
@@ -19,13 +19,51 @@ body {
 h1 {
   text-align: center;
   font-family: sans-serif;
-  font-size: 50px;
+  font-size: 30px;
   background-color: lightblue;
+  text-transform: uppercase;
 }
 
-p {
+p1 {
   text-align: center;
   font-family: sans-serif;
-  font-size: 25px;
+  font-size: 15px;
   background-color: red;
+}
+p2 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  background-color: red;
+}
+p3 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  background-color: red;
+}
+p4 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  background-color: red;
+}
+p5 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  background-color: red;
+}
+
+div {
+  display: inline-grid;
+  grid-gap: 5px;
+  padding-left: 46%;
+  padding-top: 8%;
+}
+
+img {
+  padding-left: 10%;
+  width: 200px;
+  height: 400px;
 }
