--- a/main2.css
+++ b/main2.css
@@ -1,20 +1,8 @@
-/* h1 {
-  text-align: center;
-} */
 
 body {
   background-color: lightblue;
+  background-image: url();
 }
-
-/* input {
-  text-align: center;
-  float: right;
-  padding: 6px;
-  border: 3px solid black;
-  margin-top: 20px;
-  margin-right: 40%;
-  font-size: 20px;
-} */
 
 h1 {
   text-align: center;
@@ -60,13 +48,13 @@ div {
   grid-gap: 5px;
   padding-left: 44%;
   padding-top: 8%;
-  padding-bottom: 10%;
+  margin-bottom: 0%;
 }
 
 img {
   padding-left: 10%;
-  width: 200px;
-  height: 400px;
+  width: 100px;
+  height: 100px;
 }
 
 button {
