--- a/main2.css
+++ b/main2.css
@@ -1,14 +1,20 @@
-
+.skills ul {
+  text-decoration: none;
+  display: inline-grid;
+  grid-gap: 10%;
+}
 body {
-  background-color: lightblue;
-  background-image: url();
+  background-image: url('https://static.wixstatic.com/media/db8752_e609e998545d434b8f28be19634e84a2~mv2.png/v1/fill/w_325,h_289,al_c,usm_0.66_1.00_0.01/Game-Boy-Advance.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 h1 {
   text-align: center;
   font-family: sans-serif;
   font-size: 30px;
-  background-color: lightblue;
+  border: 5px solid lightpink;
+  border-radius: 5%;
   text-transform: uppercase;
 }
 
@@ -16,45 +22,58 @@ p1 {
   text-align: center;
   font-family: sans-serif;
   font-size: 15px;
-  background-color: red;
+  border: 5px solid lightpink;
+  border-radius: 5%;
 }
 p2 {
   text-align: center;
   font-family: sans-serif;
   font-size: 15px;
-  background-color: red;
+  border: 5px solid lightpink;
+  border-radius: 5%;
 }
 p3 {
+  padding-top: 40%;
   text-align: center;
   font-family: sans-serif;
-  font-size: 15px;
-  background-color: red;
+  font-size: 40px;
+  background-color: grey;
+  border: 5px solid lightpink;
+  border-radius: 5%;
 }
 p4 {
   text-align: center;
   font-family: sans-serif;
   font-size: 15px;
-  background-color: red;
+  border: 5px solid lightpink;
+  border-radius: 5%;
 }
 p5 {
   text-align: center;
   font-family: sans-serif;
   font-size: 15px;
-  background-color: red;
+  border: 5px solid lightpink;
+  border-radius: 5%;
 }
 
 div {
-  display: inline-grid;
-  grid-gap: 5px;
-  padding-left: 44%;
-  padding-top: 8%;
-  margin-bottom: 0%;
+  /* display: inline-grid; */
+  /* grid-gap: 5px; */
+  padding-left: 15%;
+  padding-top: 10%;
+  display: grid;
+  grid-template: 300px 300px 300px / 300px 300px 300px;
+  grid-column-gap: 50px;
+  grid-row-gap: 20px;
 }
 
 img {
   padding-left: 10%;
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 300px;
+  background: url("https://img.icons8.com/color/420/open-pokeball.png");
+  background-size: cover;
+
 }
 
 button {
