--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -1,4 +1,3 @@
-
 body {
   background-image: url('https://static.wixstatic.com/media/db8752_e609e998545d434b8f28be19634e84a2~mv2.png/v1/fill/w_325,h_289,al_c,usm_0.66_1.00_0.01/Game-Boy-Advance.png');
   background-size: cover;
@@ -9,51 +8,44 @@ p {
   text-align: center;
   font-family: sans-serif;
   font-size: 40px;
-  border: 8px solid lightpink;
+  border: 5px solid lightpink;
   border-radius: 5%;
   text-transform: uppercase;
   padding-top: 24%;
-  background-image: url('https://www.maxpixel.net/static/photo/640/Pixel-Color-Square-Mosaic-Background-Tile-Tiles-2724387.jpg');
 }
 
 p1 {
   text-align: center;
   font-family: sans-serif;
   font-size: 30px;
-  border: 8px solid lightpink;
+  border: 5px solid lightpink;
   border-radius: 5%;
   padding-top: 40%;
-  background-image: url('https://www.maxpixel.net/static/photo/640/Pixel-Color-Square-Mosaic-Background-Tile-Tiles-2724387.jpg');
-
 }
 p2 {
   text-align: center;
   font-family: sans-serif;
   font-size: 30px;
-  border: 8px solid lightpink;
+  border: 5px solid lightpink;
   border-radius: 5%;
   padding-top: 40%;
-  background-image: url('https://www.maxpixel.net/static/photo/640/Pixel-Color-Square-Mosaic-Background-Tile-Tiles-2724387.jpg');
-
 }
 p3 {
   padding-top: 40%;
   text-align: center;
   font-family: sans-serif;
   font-size: 30px;
-  background-image: url('https://www.maxpixel.net/static/photo/640/Pixel-Color-Square-Mosaic-Background-Tile-Tiles-2724387.jpg');
-  border: 8px solid lightpink;
+  background-color: grey;
+  border: 5px solid lightpink;
   border-radius: 5%;
 }
 p4 {
   text-align: center;
   font-family: sans-serif;
   font-size: 30px;
-  border: 8px solid lightpink;
+  border: 5px solid lightpink;
   border-radius: 5%;
   padding-top: 40%;
-  background-image: url('https://www.maxpixel.net/static/photo/640/Pixel-Color-Square-Mosaic-Background-Tile-Tiles-2724387.jpg');
-
 }
 
 div {
@@ -90,5 +82,4 @@ button {
 #btn {
   border-radius: 100%;
   margin-left: 44%;
-  margin-top: 1%;
 }
